--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Journey by Boat</h3>
+    <p>A journey by boat can be a peaceful and enjoyable experience, especially in a riverine country like Bangladesh. It offers a chance to connect with nature, escape the hustle and bustle of city life, and have new experiences. Journeys by boat are common for both practical transportation and recreational purposes. </p>
     
 </body>
 </html>
