--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journey by boat</title>
     <link rel="shortcut icon" href="imageds/home page.png" type="image/x-icon">
+    <link rel="stylesheet" href="jounery.css">
 </head>
 
 <body>
@@ -13,20 +14,21 @@
     <p>A journey by boat can be a peaceful and enjoyable experience, especially in a riverine country like Bangladesh.
         It offers a chance to connect with nature, escape the hustle and bustle of city life, and have new experiences.
         Journeys by boat are common for both practical transportation and recreational purposes. </p>
-    <div>
-        <h3>Here's why a boat journey can be special:</h3>
+    <div class="div-style"><hr>
+        <h3><i>Wlecome</i></h3>
         <p>
             Boats offer a unique perspective on the surroundings, allowing for close observation of nature, rivers, and
             landscapes.
             The gentle rocking motion of a boat and the quiet sounds of the water can be very relaxing and calming.
             In many places, particularly in Bangladesh, boats are a primary mode of transportation, connecting
             communities and facilitating travel.
-            Boating can be a fun and enjoyable activity for leisure, offering opportunities for exploration and
-            recreation on the water.
-            In some regions, boats play a significant role in local culture and traditions</p>
+           </p>
               
             <img src="./assets/al-jazeera.png" alt="">
             <button>click Me</button>
+            <button>Click Me 2</button>
+            <hr>
+
     </div>
 
 </body>
